--- a/framework/core/assets/rokkstar.css
+++ b/framework/core/assets/rokkstar.css
@@ -293,12 +293,6 @@ td { vertical-align: top; }
 }
 
 
-.coreGraphics{
-    position:absolute;
-    top:0px;
-    left:0px;
-}
-
 .coreBall {
     background-color: rgba(0,0,0,0);
     border:5px solid rgba(0,183,229,0.9);
@@ -345,177 +339,13 @@ td { vertical-align: top; }
 	0% { -webkit-transform:rotate(0deg); }
 	100% { -webkit-transform:rotate(-360deg); }
 }
-.coreLoaderContent{
-    margin: 0 auto;
-    padding-top: 50px;
-}
 
-/* jqModal base Styling courtesy of;
-	Brice Burgess <bhb@iceburg.net> */
-
-/* The Window's CSS z-index value is respected (takes priority). If none is supplied,
-	the Window's z-index value will be set to 3000 by default (via jqModal.js). */
-
-.jqmWindow {
-    display: none;
-
-    position: fixed;
-    top: 17%;
-    left: 50%;
-
-    margin-left: -300px;
-    width: 600px;
-
-    background-color: #EEE;
-    color: #333;
-    border: 1px solid black;
-    padding: 12px;
-}
-
-.jqmOverlay { background-color: #000; }
-
-/* Background iframe styling for IE6. Prevents ActiveX bleed-through (<select> form elements, etc.) */
-* iframe.jqm {position:absolute;top:0;left:0;z-index:-1;
-    width: expression(this.parentNode.offsetWidth+'px');
-    height: expression(this.parentNode.offsetHeight+'px');
-}
-
-/* Fixed posistioning emulation for IE6
-     Star selector used to hide definition from browsers other than IE6
-     For valid CSS, use a conditional include instead */
-* html .jqmWindow {
-    position: absolute;
-    top: expression((document.documentElement.scrollTop || document.body.scrollTop) + Math.round(17 * (document.documentElement.offsetHeight || document.body.clientHeight) / 100) + 'px');
-}
-
-.coreTWBackground{
-    background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,0.8) 22%, rgba(0,0,0,1.0) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,1)), color-stop(22%,rgba(0,0,0,0.8)), color-stop(100%,rgba(0,0,0,0.8))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%,rgba(0,0,0,0.8) 22%,rgba(0,0,0,1.0) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, rgba(0,0,0,1) 0%,rgba(0,0,0,0.8) 22%,rgba(0,0,0,1.0) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, rgba(0,0,0,1) 0%,rgba(0,0,0,0.8) 22%,rgba(0,0,0,1.0) 100%); /* IE10+ */
-    background: linear-gradient(top, rgba(0,0,0,1) 0%,rgba(0,0,0,0.8) 22%,rgba(0,0,0,1.0) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#cc000000',GradientType=0 ); /* IE6-9 */
-    border-radius:10px;
-    border: 1px #FFFFFF solid;
-    -moz-box-shadow: 2px 2px 2px rgba(0,0,0,0.6);
-    -webkit-box-shadow: 2px 2px 2px rgba(0,0,0,0.6);
-    box-shadow: 2px 2px 2px rgba(0,0,0,0.6);
-}
-
-.coreTWTitle{
-    border-radius:10px;
-    border:none;
-    background: -moz-linear-gradient(top, rgba(153,153,153,0.5) 0%, rgba(153,153,153,0.5) 30%, rgba(71,70,71,0.5) 42%, rgba(0,0,0,0.5) 45%, rgba(0,0,0,0) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(153,153,153,0.5)), color-stop(30%,rgba(153,153,153,0.5)), color-stop(42%,rgba(71,70,71,0.5)), color-stop(45%,rgba(0,0,0,0.5)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, rgba(153,153,153,0.5) 0%,rgba(153,153,153,0.5) 30%,rgba(71,70,71,0.5) 42%,rgba(0,0,0,0.5) 45%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, rgba(153,153,153,0.5) 0%,rgba(153,153,153,0.5) 30%,rgba(71,70,71,0.5) 42%,rgba(0,0,0,0.5) 45%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, rgba(153,153,153,0.5) 0%,rgba(153,153,153,0.5) 30%,rgba(71,70,71,0.5) 42%,rgba(0,0,0,0.5) 45%,rgba(0,0,0,0) 100%); /* IE10+ */
-    background: linear-gradient(top, rgba(153,153,153,0.5) 0%,rgba(153,153,153,0.5) 30%,rgba(71,70,71,0.5) 42%,rgba(0,0,0,0.5) 45%,rgba(0,0,0,0) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80999999', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
-    line-height:20px;
-    font-size:12px;
-    color:white;
-}
-
-.coreTWContent{
-    border-bottom-left-radius:10px;
-    border-bottom-right-radius:10px;
-    color:white;
-}
-
-.coreCPHolder{
-    width:356px;
-    height:176px;
-    position:absolute;
-    z-index:100;
-}
-
-.coreTWCloseButton{
-    opacity:0.8;
-    background: rgb(169,3,41); /* Old browsers */
-    background: -moz-linear-gradient(left, rgba(169,3,41,1) 0%, rgba(143,2,34,1) 44%, rgba(109,0,25,1) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(169,3,41,1)), color-stop(44%,rgba(143,2,34,1)), color-stop(100%,rgba(109,0,25,1))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(left, rgba(169,3,41,1) 0%,rgba(143,2,34,1) 44%,rgba(109,0,25,1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(left, rgba(169,3,41,1) 0%,rgba(143,2,34,1) 44%,rgba(109,0,25,1) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(left, rgba(169,3,41,1) 0%,rgba(143,2,34,1) 44%,rgba(109,0,25,1) 100%); /* IE10+ */
-    background: linear-gradient(left, rgba(169,3,41,1) 0%,rgba(143,2,34,1) 44%,rgba(109,0,25,1) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#6d0019',GradientType=1 ); /* IE6-9 */
-    position:absolute;
-    right:3px;
-    top:3px;
-    height:12px;
-    width:13px;
-    border-radius:7px;
-    font-size:10px;
-    line-height:12px;
-    padding:0;
-    text-align:center;
-    color:white;
-    background-color:#900;
-    border:1px white solid;
-    -moz-box-shadow: 2px 2px 2px rgba(0,0,0,0.6);
-    -webkit-box-shadow: 2px 2px 2px rgba(0,0,0,0.6);
-    box-shadow: 2px 2px 2px rgba(0,0,0,0.6);
-}
-.coreTWCloseButton:hover{
-    opacity:1.0;
-}
-
-.coreCPButton{
-    border:1px solid #999;
-    width:20px;
-    height:20px;
-    margin-left:auto;
-    margin-right:auto;
-    -moz-box-shadow: 2px 2px 2px rgba(0,0,0,0.6);
-    -webkit-box-shadow: 2px 2px 2px rgba(0,0,0,0.6);
-    box-shadow: 2px 2px 2px rgba(0,0,0,0.6);
-}
-
-.coreCPHighlight{
-    margin-left:1px;
-    margin-right:1px;
-    margin-top:1px;
-    background: -moz-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(left, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(left, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(left, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
-    background: linear-gradient(left, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
-    height:10px;
-}
-
-.coreScrollBarWrapper{
-    position:absolute;
-    right:5px;
-    top:0px;
-    bottom:0px;
-    width:5px;
-}
-
-.coreScrollBar{
-    background-color:#333;
-    position:absolute;
-    left:0px;
-    right:0px;
-    border-radius:2px;
-    opacity:0.5;
-}
-
-.coreScrollBar:hover{
-    opacity:1.0;
-}
-
-.coreModalLayer{
-    position: fixed;
-    top:0px;
-    bottom:0px;
-    left:0px;
-    right:0px;
-    background-color: #333333;
-    opacity: 0.5;
+.rokkstar_focus{
+    -webkit-box-shadow: 0 0 6px 2px rgba(13,170,255,0.69);
+    -moz-box-shadow: 0 0 6px 2px rgba(13,170,255,0.69);
+    box-shadow: 0 0 6px 2px rgba(13,170,255,0.69);
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
 }
 
 .noSelect{
