--- a/framework/skins/default/assets/skin.font.css
+++ b/framework/skins/default/assets/skin.font.css
@@ -95,7 +95,8 @@
     font-style: normal;
 
 }
-/** Panel related styles */
+/*
+
 .core_Panel_Background{
     background-color: white;
     border: 1px #CCCCCC solid;
@@ -128,7 +129,7 @@
 
 }
 
-/** TitlePanel related styles */
+// TitlePanel related styles
 .core_TitlePanel_Background{
     background-color: white;
     border: 1px #CCCCCC solid;
@@ -190,7 +191,7 @@
     font-size: 12px;
 }
 
-/** Button related styles */
+//
 .core_Button_Background{
     border: #999999 solid 1px;
     -webkit-border-radius: 5px;
@@ -254,10 +255,5 @@
     filter: dropshadow(color=#ffffff, offx=0, offy=0);
 }
 
-.rokkstar_focus{
-    -webkit-box-shadow: 0 0 6px 2px rgba(13,170,255,0.69);
-    -moz-box-shadow: 0 0 6px 2px rgba(13,170,255,0.69);
-    box-shadow: 0 0 6px 2px rgba(13,170,255,0.69);
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-}
+
+*/
