Another fix in animation interuption and CSS changes

--- a/framework/core/assets/rokkstar.css
+++ b/framework/core/assets/rokkstar.css
@@ -369,3 +369,14 @@ td { vertical-align: top; }
 .coreUpDownHandle{
     cursor: n-resize;
 }
+
+input{
+    border: none;
+    background: transparent;
+}
+
+input:focus,
+select:focus,
+textarea:focus {
+    outline: none;
+}
